# assessment-agent

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  assessment-agent-prd.md  pyproject.toml  railway.toml
src/: agent.py  config.py  db.py  demo.py  domain_knowledge.py  evidence_report.py  learner_model.py  main.py  server.py  synthetic_learner.py  task_library.py  tools.py  types.py
